--- a/packages/tailwind/package.json
+++ b/packages/tailwind/package.json
@@ -5,8 +5,8 @@
   "main": "./dist/index.js",
   "scripts": {
     "build": "tsc --build && tsconfig-replace-paths",
-    "clean": "rm -fR dist && rm -fR *.tsbuildinfo",
-    "clean:o": "rm -rf node_modules",
+    "clean": "bolt-sh rm -fR dist *.tsbuildinfo",
+    "clean:o": "bolt-sh rm -fR node_modules",
     "format": "prettier --check . --ignore-path ../../.gitignore",
     "lint": "eslint .",
     "rebuild": "npm run clean && npm run build",
