build workflow working

--- a/package.json
+++ b/package.json
@@ -33,20 +33,21 @@
     "prepare": "npm run clean-all && npm run build-all",
     "test-all": "npm run test --workspaces --if-present"
   },
-  "peerDependencies": {
-    "nativewind": ">=2.0.11",
-    "react": ">=18.2.0",
-    "react-dom": ">=18.2.0",
-    "react-native-svg": ">=15.1.0"
-  },
   "devDependencies": {
     "@jest/globals": "^29.7.0",
     "jest": "^29.7.0",
     "nativewind": "2.0.11",
-    "tailwindcss": "3.3.2",
-    "tsconfig-replace-paths": "^0.0.14",
+    "tailwindcss": "3.4.1",
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
-    "typescript": "^5.2.2"
+    "tsconfig-replace-paths": "^0.0.14",
+    "typescript": "^5.4.3"
+  },
+  "peerDependencies": {
+    "@babel/preset-env": "7.24.3",
+    "nativewind": ">=2.0.11",
+    "react": ">=18.2.0",
+    "react-dom": ">=18.2.0",
+    "react-native-svg": ">=15.1.0"
   }
 }
