--- a/packages/ignition/tsconfig.json
+++ b/packages/ignition/tsconfig.json
@@ -18,7 +18,13 @@
       }
     ],
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "@/components/*": ["./src/app/components/*"],
+      "@/hooks": ["./src/app/hooks/"],
+      "@/hooks/*": ["./src/app/hooks/*"],
+      "@/locales": ["./src/app/locales/"],
+      "@/locales/*": ["./src/app/locales/*"],
+      "@/types": ["./src/app/types/"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
