Update package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@rocket-climb/bolt",
+  "name": "rocketclimb-icons",
   "version": "0.1.0",
   "description": "React / React Native powered by tailwind",
   "keywords": [
