--- a/packages/gen/package.json
+++ b/packages/gen/package.json
@@ -9,6 +9,7 @@
   "scripts": {
     "build": "npx ts-node ./src/build.ts",
     "clean": "bolt-sh rm -fR dist core *.tsbuildinfo",
+    "prebuild": "npm run fetch",
     "postbuild": "npm run copy-files",
     "copy-files": "bolt-sh cp -fR ../core/dist/* ../icons/core/ && bolt-sh cp -fR ../tailwind/dist/* ../icons/tailwind/",
     "fetch": "npx ts-node ./src/fetcher.ts",
@@ -29,9 +30,9 @@
     "feather-icons": "^4.29.1",
     "find-package": "^1.0.0",
     "glob-promise": "^6.0.5",
-    "ionicons": "^7.3.0",
+    "ionicons": "^4.6.3",
     "ionicons-5": "npm:ionicons@5",
-    "lucide-static": "^0.363.0",
+    "lucide-static": "^0.263.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native-svg": "15.1.0",
