--- a/packages/ignition/package.json
+++ b/packages/ignition/package.json
@@ -13,7 +13,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-markdown": "^9.0.1",
-    "rocket-bolt": "*"
+    "rocketicons": "*"
   },
   "devDependencies": {
     "@types/node": "^20",
