--- a/packages/sh/package.json
+++ b/packages/sh/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "bolt-sh",
+  "name": "rocketicons-sh",
   "version": "0.1.0",
   "description": "Shared scripts",
   "bin": {
-    "bolt-sh": "bin/cli.js"
+    "rocketicons-sh": "bin/cli.js"
   },
   "devDependencies": {
     "minimist": "^1.2.8",
