--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "@rocket-climb/bolt-core",
+  "name": "@rocketicons/core",
   "version": "0.1.0",
   "license": "MIT",
   "main": "./dist/index.js",
   "scripts": {
     "build": "tsc -b ./tsconfig.cjs.json ./tsconfig.esm.json ./tsconfig.types.json && tsconfig-replace-paths",
-    "postbuild": "bolt-sh cp \"dist-esm/**/*.js\" \"dist/**/*.mjs\"",
-    "clean": "bolt-sh rm -fR dist dist-esm && bolt-sh rm -fR *.tsbuildinfo",
-    "clean:o": "bolt-sh rm -fR node_modules",
+    "postbuild": "rocketicons-sh cp \"dist-esm/**/*.js\" \"dist/**/*.mjs\"",
+    "clean": "rocketicons-sh rm -fR dist dist-esm && rocketicons-sh rm -fR *.tsbuildinfo",
+    "clean:o": "rocketicons-sh rm -fR node_modules",
     "format": "prettier --check . --ignore-path ../../.gitignore",
     "lint": "eslint .",
     "rebuild": "npm run clean && npm run build",
@@ -15,7 +15,7 @@
     "typecheck": "tsc --noEmit"
   },
   "devDependencies": {
-    "bolt-sh": "*"
+    "rocketicons-sh": "*"
   },
   "files": [
     "dist/"
