--- a/packages/ignition/package.json
+++ b/packages/ignition/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "@content-collections/core": "^0.3.1",
     "@content-collections/next": "^0.1.3",
+    "@shikijs/rehype": "1.2.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
