--- a/packages/ignition/package.json
+++ b/packages/ignition/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "build": "next build",
-    "dev": "next dev",
+    "dev": "rm -fR .conent-collections && next dev",
     "lint": "next lint",
     "start": "next start"
   },
