--- a/packages/ignition/package.json
+++ b/packages/ignition/package.json
@@ -15,6 +15,7 @@
     "@next/mdx": "^14.1.4",
     "@shikijs/rehype": "1.2.0",
     "@types/mdx": "^2.0.12",
+    "@vercel/speed-insights": "^1.0.10",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
