--- a/packages/ignition/package.json
+++ b/packages/ignition/package.json
@@ -21,7 +21,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-markdown": "^9.0.1",
-    "rehype-slug": "^6.0.0",
+    "rehype-slug-custom-id": "^1.1.0",
     "remark-frontmatter": "^5.0.0",
     "remark-mdx-frontmatter": "^4.0.0",
     "rocketicons": "*"
