--- a/packages/ignition/package.json
+++ b/packages/ignition/package.json
@@ -14,6 +14,7 @@
     "@mdx-js/loader": "^3.0.1",
     "@mdx-js/react": "^3.0.1",
     "@next/mdx": "^14.1.4",
+    "@next/third-parties": "^14.1.4",
     "@shikijs/rehype": "1.2.0",
     "@types/mdx": "^2.0.12",
     "@vercel/analytics": "^1.2.2",
