--- a/.github/workflows/multi-semantic-release.yml
+++ b/.github/workflows/multi-semantic-release.yml
@@ -1,7 +1,7 @@
-# This workflow will run tests using node and then publish a package to GitHub Packages when a release is created
-# For more information see: https://docs.github.com/en/actions/publishing-packages/publishing-nodejs-packages
+# This workflow should publish a package from the monorepo
+# For more information see: https://github.com/marketplace/actions/multi-semantic-release
 
-name: Node.js Package
+name: Multi-Semantic Release
 
 on:
   release:
