--- a/.github/workflows/multi-semantic-release.yml
+++ b/.github/workflows/multi-semantic-release.yml
@@ -15,7 +15,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: 16
+          node-version: 18
       - run: npm ci
       - run: npm test
 
@@ -30,7 +30,7 @@ jobs:
           dry-run: true
           
           # github PAT (personal access token) used to create tags and releases in the repository
-          github-token: '${{secrets.GH_TOKEN}}'
+          github-token: '${{secrets.GITHUB_TOKEN}}'
       - run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{secrets.npm_token}}
