fix: ignoring packages/icons files

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,10 @@ dist
 dist-esm
 node_modules
 tsconfig*.tsbuildinfo
+packages/icons
+packages/icons/package.json
+packages/icons/.release-it.js
+packages/icons/.npmignore
 .DS_Store
 .vercel
 .env
