--- a/packages/ignition/tsconfig.json
+++ b/packages/ignition/tsconfig.json
@@ -29,6 +29,11 @@
       "content-collections": ["./.content-collections/generated"]
     }
   },
+  "ts-node": {
+    "compilerOptions": {
+      "module": "commonjs"
+    }
+  },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
 }
