--- a/packages/ignition/package.json
+++ b/packages/ignition/package.json
@@ -22,10 +22,12 @@
     "@types/mdx": "^2.0.12",
     "@vercel/analytics": "^1.2.2",
     "@vercel/speed-insights": "^1.0.10",
+    "algoliasearch": "^4.23.3",
     "camelcase": "^8.0.0",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-instantsearch-dom": "^6.40.4",
     "react-markdown": "^9.0.1",
     "rehype-slug-custom-id": "^1.1.0",
     "remark-frontmatter": "^5.0.0",
