--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -5,26 +5,5 @@
     "README.md"
   ],
   "commitType": "docs",
-  "commitConvention": "angular",
-  "contributorsPerLine": 7,
-  "contributors": [
-    {
-      "login": "programad",
-      "name": "Daniel Gomes",
-      "avatar_url": "https://avatars.githubusercontent.com/u/1039567?v=4",
-      "profile": "https://github.com/anteatergames/ludustack",
-      "contributions": [
-        "code"
-      ]
-    },
-    {
-      "login": "amorimjj",
-      "name": "Jeferson J Amorim",
-      "avatar_url": "https://avatars.githubusercontent.com/u/3980851?v=4",
-      "profile": "https://github.com/amorimjj",
-      "contributions": [
-        "code"
-      ]
-    }
-  ]
+  "commitConvention": "angular"
 }
