--- a/packages/ignition/package.json
+++ b/packages/ignition/package.json
@@ -20,6 +20,7 @@
     "@rocketclimb/content-collections": "^0.1.2",
     "@shikijs/rehype": "1.2.0",
     "@types/mdx": "^2.0.12",
+    "@types/react-instantsearch-dom": "^6.12.7",
     "@vercel/analytics": "^1.2.2",
     "@vercel/speed-insights": "^1.0.10",
     "algoliasearch": "^4.23.3",
