--- a/packages/ignition/package.json
+++ b/packages/ignition/package.json
@@ -24,7 +24,7 @@
     "@vercel/analytics": "^1.2.2",
     "@vercel/speed-insights": "^1.0.10",
     "algoliasearch": "^4.23.3",
-    "camelcase": "^8.0.0",
+    "change-case": "^5.4.4",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
