--- a/packages/ignition/tsconfig.json
+++ b/packages/ignition/tsconfig.json
@@ -20,6 +20,7 @@
     "paths": {
       "@/*": ["./src/*"],
       "@/components/*": ["./src/app/components/*"],
+      "@/data-helpers/*": ["./src/app/data-helpers/*"],
       "@/hooks": ["./src/app/hooks/"],
       "@/hooks/*": ["./src/app/hooks/*"],
       "@/locales": ["./src/app/locales/"],
