--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "tailwindcss": "3.4.1",
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
+    "tsconfig-paths": "^4.2.0",
     "tsconfig-replace-paths": "^0.0.14",
     "typescript": "^5.4.3"
   },
