--- a/packages/ignition/package.json
+++ b/packages/ignition/package.json
@@ -10,6 +10,7 @@
     "predev:all-icons": "npm run generate-statics:all-icons",
     "dev:all-icons": "next dev",
     "generate-statics": "npx ts-node -r tsconfig-paths/register ./src/statics-generator",
+    "indexer": "npx ts-node -r tsconfig-paths/register ./src/algolia-indexer",
     "generate-statics:all-icons": "NEXT_PUBLIC_VERCEL_ENV=develop npx ts-node -r tsconfig-paths/register ./src/statics-generator",
     "lint": "next lint",
     "rebuild": "rm -fR .content-collections && next build",
