--- a/packages/ignition/package.json
+++ b/packages/ignition/package.json
@@ -23,8 +23,6 @@
     "@next/third-parties": "^14.1.4",
     "@rocketclimb/content-collections": "^0.1.2",
     "@shikijs/rehype": "1.3.0",
-    "@types/mdx": "^2.0.13",
-    "@types/react-instantsearch-dom": "^6.12.7",
     "@vercel/analytics": "^1.2.2",
     "@vercel/speed-insights": "^1.0.10",
     "algoliasearch": "^4.23.3",
@@ -32,13 +30,14 @@
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
-    "react-instantsearch-dom": "^6.40.4",
+    "react-instantsearch": "^7.7.2",
     "rehype-slug-custom-id": "^1.1.0",
     "remark-frontmatter": "^5.0.0",
     "remark-mdx-frontmatter": "^4.0.0",
     "rocketicons": "*"
   },
   "devDependencies": {
+    "@types/mdx": "^2.0.13",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
