--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -12,7 +12,7 @@
     "clean": "rocketicons-sh rm -fR dist dist-esm && rocketicons-sh rm -fR *.tsbuildinfo",
     "clean:o": "rocketicons-sh rm -fR node_modules",
     "format": "prettier --check . --ignore-path ../../.gitignore",
-    "lint": "eslint .",
+    "lint": "eslint src/**/*",
     "rebuild": "npm run clean && npm run build",
     "test": "jest ./src",
     "typecheck": "tsc --noEmit"
