Add configuration for lint and prettier

--- a/packages/gen/package.json
+++ b/packages/gen/package.json
@@ -13,8 +13,8 @@
     "postbuild": "npm run copy-files",
     "copy-files": "rocketicons-sh cp -fR ../core/dist/* ../icons/core/ && rocketicons-sh cp -fR ../tailwind/dist/* ../icons/tailwind/",
     "fetch": "npx ts-node ./src/fetcher.ts",
-    "format": "prettier --check . --ignore-path ../../.gitignore",
-    "lint": "eslint .",
+    "format": "prettier --check src/* --write --ignore-path ../../.gitignore",
+    "lint": "eslint src/**/*",
     "rebuild": "npm run clean && npm run build",
     "refetch": "npx ts-node ./src/fetcher.ts --force",
     "test": "jest ./src --passWithNoTests",
