--- a/package.json
+++ b/package.json
@@ -32,13 +32,19 @@
     "build-all": "npm run build --workspaces --if-present",
     "clean-all": "npm run clean --workspaces --if-present",
     "prepare": "npm run clean-all && npm run build-all",
-    "test-all": "npm run test --workspaces --if-present"
+    "test-all": "npm run test --workspaces --if-present",
+    "format-all": "npm run format --workspaces --if-present",
+    "lint-all": "npm run lint --workspaces --if-present"
   },
   "devDependencies": {
     "@jest/globals": "^29.7.0",
+    "@typescript-eslint/eslint-plugin": "^7.7.1",
+    "eslint-plugin-react": "^7.34.1",
     "husky": "^9.0.11",
     "jest": "^29.7.0",
+    "lint-staged": "^15.2.2",
     "nativewind": "2.0.11",
+    "prettier": "^3.2.5",
     "tailwindcss": "3.4.1",
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
@@ -55,7 +61,16 @@
   },
   "husky": {
     "hooks": {
-      "pre-push": "git diff HEAD --quiet && npm run test-all"
+      "pre-commit": "git diff HEAD --quiet && npm run test-all"
     }
+  },
+  "lint-staged": {
+    "*.+(ts|tsx)": [
+      "eslint --fix",
+      "prettier --write"
+    ],
+    "*.+(json|css|md)": [
+      "prettier --write"
+    ]
   }
 }
