--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -11,7 +11,7 @@
     "postbuild": "rocketicons-sh cp \"dist-esm/**/*.js\" \"dist/**/*.mjs\"",
     "clean": "rocketicons-sh rm -fR dist dist-esm && rocketicons-sh rm -fR *.tsbuildinfo",
     "clean:o": "rocketicons-sh rm -fR node_modules",
-    "format": "prettier --check . --ignore-path ../../.gitignore",
+    "format": "prettier --check . --write --ignore-path ../../.gitignore",
     "lint": "eslint src/**/*",
     "rebuild": "npm run clean && npm run build",
     "test": "jest ./src",
