--- a/packages/ignition/package.json
+++ b/packages/ignition/package.json
@@ -13,6 +13,7 @@
     "generate-statics:all-icons": "NEXT_PUBLIC_VERCEL_ENV=develop npx ts-node -r tsconfig-paths/register ./src/statics-generator",
     "indexer": "npx ts-node -r tsconfig-paths/register ./src/algolia-indexer",
     "lint": "next lint",
+    "format": "prettier --check src/* --write --ignore-path ../../.gitignore",
     "rebuild": "rm -fR .content-collections && next build",
     "start": "next start"
   },
@@ -42,6 +43,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.19",
+    "eslint-config-next": "14.2.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.4.3"
