--- a/packages/tailwind/package.json
+++ b/packages/tailwind/package.json
@@ -7,8 +7,8 @@
     "build": "tsc --build && tsconfig-replace-paths",
     "clean": "rocketicons-sh rm -fR dist *.tsbuildinfo",
     "clean:o": "rocketicons-sh rm -fR node_modules",
-    "format": "prettier --check . --ignore-path ../../.gitignore",
-    "lint": "eslint .",
+    "format": "prettier --check . --write --ignore-path ../../.gitignore",
+    "lint": "eslint src/**/*",
     "rebuild": "npm run clean && npm run build",
     "test": "jest ./src",
     "typecheck": "tsc --noEmit"
