--- a/packages/icons/package.json
+++ b/packages/icons/package.json
@@ -1,7 +1,15 @@
 {
   "name": "rocketicons",
   "version": "0.0.0",
+  "description": "rocketicons is a React component system, for web and mobile, that provides a variety of collections with high-quality open-source icons for your projects. With the power of Tailwind.",
   "license": "MIT",
+  "keywords": [
+    "icons",
+    "react",
+    "react-native",
+    "tailwind",
+    "nativewind"
+  ],
   "engines": {
     "npm": ">=6.0.0"
   },
