--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "lint-all": "npm run lint --workspaces --if-present"
   },
   "devDependencies": {
+    "@commitlint/cli": "^19.3.0",
+    "@commitlint/config-conventional": "^19.2.2",
     "@jest/globals": "^29.7.0",
     "@typescript-eslint/eslint-plugin": "^7.7.1",
     "eslint-plugin-react": "^7.34.1",
@@ -45,6 +47,7 @@
     "lint-staged": "^15.2.2",
     "nativewind": "2.0.11",
     "prettier": "^3.2.5",
+    "release-it": "17.1.1",
     "tailwindcss": "3.4.1",
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
