docs(changelog): force17

--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,9 @@ dist
 dist-esm
 node_modules
 tsconfig*.tsbuildinfo
-packages/icons
+packages/icons/*
+!packages/icons/CHANGELOG.md
 packages/icons/package.json
-packages/icons/.release-it.js
-packages/icons/.npmignore
 .DS_Store
 .vercel
 .env
