--- a/packages/ignition/package.json
+++ b/packages/ignition/package.json
@@ -29,8 +29,8 @@
     "algoliasearch": "^4.23.3",
     "change-case": "^5.4.4",
     "next": "14.1.4",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-instantsearch": "^7.7.2",
     "rehype-slug-custom-id": "^1.1.0",
     "remark-frontmatter": "^5.0.0",
