--- a/packages/icons/package.json
+++ b/packages/icons/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rocketicons",
+  "name": "rc-inifityloop",
   "version": "0.0.0",
   "description": "rocketicons is a React component system, for web and mobile, that provides a variety of collections with high-quality open-source icons for your projects. With the power of Tailwind.",
   "license": "MIT",
