--- a/packages/ignition/package.json
+++ b/packages/ignition/package.json
@@ -22,7 +22,7 @@
     "@mdx-js/react": "^3.0.1",
     "@next/mdx": "^14.1.4",
     "@next/third-parties": "^14.1.4",
-    "@rocketclimb/content-collections": "^0.1.2",
+    "@rocketclimb/content-collections": "latest",
     "@shikijs/rehype": "1.3.0",
     "@vercel/analytics": "^1.2.2",
     "@vercel/speed-insights": "^1.0.10",
