--- a/packages/icons/package.json
+++ b/packages/icons/package.json
@@ -1,15 +1,25 @@
 {
-  "name": "rc-inifityloop",
+  "name": "rc-infinityloop",
   "version": "0.0.0",
   "description": "rocketicons is a React component system, for web and mobile, that provides a variety of collections with high-quality open-source icons for your projects. With the power of Tailwind.",
   "license": "MIT",
-  "keywords": [
-    "icons",
-    "react",
-    "react-native",
-    "tailwind",
-    "nativewind"
-  ],
+  "keywords": ["icons", "react", "react-native", "tailwind", "nativewind"],
+  "private": false,
+  "main": "./index.js",
+  "module": "./index.mjs",
+  "types": "./index.d.ts",
+  "sideEffects": false,
+  "scripts": {
+    "test": "echo \"Go icons!\" && exit 0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/rocketclimb/rocketicons.git"
+  },
+  "homepage": "https://rocketicons.io",
+  "bugs": {
+    "url": "https://github.com/rocketclimb/rocketicons/issues"
+  },
   "engines": {
     "npm": ">=6.0.0"
   },
