--- a/packages/ignition/package.json
+++ b/packages/ignition/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "prebuild": "npm run generate-statics",
-    "build": "next build",
+    "build:disabled": "next build",
     "predev": "npm run generate-statics",
     "dev": "next dev",
     "predev:all-icons": "npm run generate-statics:all-icons",
