--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,7 +31,7 @@ jobs:
           node-version: "18.x"
 
       - name: Install packages
-        run: npm ci
+        run: npm install
 
       - name: Run tests
         run: npm run test-all
