--- a/packages/generator/package.json
+++ b/packages/generator/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@rocketicons/gen",
+  "name": "@rocketicons/generator",
   "version": "0.1.0",
   "license": "MIT",
   "main": "./dist/index.js",
