--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
   "author": "amorimjj",
   "main": "dist/index.js",
   "workspaces": [
-    "packages/sh",
     "packages/core",
     "packages/tailwind",
     "packages/generator",
@@ -34,11 +33,16 @@
     "prepare": "husky && npm run clean-all && npm run build-all",
     "test-all": "npm run test --workspaces --if-present",
     "format-all": "npm run format --workspaces --if-present",
-    "lint-all": "npm run lint --workspaces --if-present"
+    "lint-all": "npm run lint --workspaces --if-present",
+    "release": "npx rocketclimb-sh releaser"
   },
   "devDependencies": {
+    "@commitlint/cli": "^19.3.0",
+    "@commitlint/config-conventional": "^19.2.2",
     "@jest/globals": "^29.7.0",
     "@typescript-eslint/eslint-plugin": "^7.7.1",
+    "@rocketclimb/sh": "0.1.7",
+    "conventional-commits-parser": "^5.0.0",
     "eslint-plugin-react": "^7.34.1",
     "husky": "^9.0.11",
     "jest": "^29.7.0",
